tests/fixtures/invalid/divmod_list_float.py
# Cannot call divmod() with List[int], Float
x = divmod([1, 2, 3], 1.0)
